chore: bump java to 21